--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="css/main.css">
     <title>Madmin</title>
 </head>
 <body>
@@ -48,6 +49,64 @@
             </ul>
         </div>
     </nav>
+
+    <section class="section section-stats center">
+        <div class="row">
+            <div class="col s12 m6 l3">
+                <div class="card-panel blue lighten-1 white-text center">
+                    <i class="material-icons medium">insert_emoticon</i>
+                    <h5>Monthly Visitors</h5>
+                    <h3 class="count">28300</h3>
+                    <div class="progress grey lighten-1">
+                        <div class="determinate white" style="width:40%"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l3">
+                <div class="card-panel center">
+                    <i class="material-icons medium">mode_edit</i>
+                    <h5>Blog Post</h5>
+                    <h3 class="count">105</h3>
+                    <div class="progress grey lighten-1">
+                        <div class="determinate blue" style="width:20%"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l3">
+                <div class="card-panel blue lighten-1 white-text center">
+                    <i class="material-icons medium">mode_comment</i>
+                    <h5>Comments</h5>
+                    <h3 class="count">1200</h3>
+                    <div class="progress grey lighten-1">
+                        <div class="determinate white" style="width:45%"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l3">
+                <div class="card-panel center">
+                    <i class="material-icons medium">supervisor_account</i>
+                    <h5>Users</h5>
+                    <h3 class="count">350</h3>
+                    <div class="progress grey lighten-1">
+                        <div class="determinate blue" style="width:10%"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /.section section-stats -->
+
+    <div class="loader preloader-wrapper big active">
+        <div class="spinner-layer spinner-blue-only">
+          <div class="circle-clipper left">
+            <div class="circle"></div>
+          </div><div class="gap-patch">
+            <div class="circle"></div>
+          </div><div class="circle-clipper right">
+            <div class="circle"></div>
+          </div>
+        </div>
+    </div>
 
     <script type="text/javascript" src="js/main.min.js"></script>
 </body>
