--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Madmin</title>
 </head>
-<body>
+<body class="grey lighten-4">
     <nav class="blue darken-2">
         <div class="container">
             <a href="index.html" class="brand-logo">Madmin</a>
@@ -29,10 +29,16 @@
                 <li>
                     <div class="user-view">
                         <div class="background">
-                            <img src="img/ocean.jpg">
+                            <picture>
+                                <source srcset="img/ocean.webp" type="image/webp">
+                                <img src="img/ocean.jpg" alt="person">
+                            </picture>
                         </div>
                         <a href="#user">
-                            <img class="circle" src="img/person1.jpg">
+                            <picture>
+                                <source srcset="img/person1.webp" type="image/webp">
+                                <img class="circle" src="img/person1.jpg" alt="person">
+                            </picture>
                         </a>
                         <a href="#name"><span class="white-text name">John Doe</span></a>
                         <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
@@ -96,6 +102,214 @@
     </section>
     <!-- /.section section-stats -->
 
+    <section class="section section-visitors blue lighten-4">
+        <div class="row">
+            <div class="col s12 m6 l8">
+                <div class="card-panel">
+                    <div id="chartContainer" style="height: 370px; width: 100%;"></div>
+                </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <ul class="collection with-header lates-comments">
+                    <li class="collection-header"><h5>Lates comments</h5></li>
+                    <li class="collection-item avatar">
+                        <picture>
+                            <source srcset="img/person1.webp" type="image/webp">
+                            <img src="img/person1.jpg" alt="avatar" class="circle">
+                            <span class="title">John Doe</span>
+                            <p class="truncate">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt quo sapiente laudantium quisquam. Nam quia nesciunt officia eum minus? Vero qui voluptates cum delectus atque.</p>
+                            <a href="#" class="approve green-text">Approve</a> |
+                            <a href="#" class="deny red-text">Deny</a>
+                        </picture>
+                    </li>
+                    <li class="collection-item avatar">
+                        <picture>
+                            <source srcset="img/person2.webp" type="image/webp">
+                            <img src="img/person2.jpg" alt="avatar" class="circle">
+                            <span class="title">Steve Smith</span>
+                            <p class="truncate">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt quo sapiente laudantium quisquam. Nam quia nesciunt officia eum minus? Vero qui voluptates cum delectus atque.</p>
+                            <a href="#" class="approve green-text">Approve</a> |
+                            <a href="#" class="deny red-text">Deny</a>
+                        </picture>
+                    </li>
+                    <li class="collection-item avatar">
+                        <picture>
+                            <source srcset="img/person3.webp" type="image/webp">
+                            <img src="img/person3.jpg" alt="avatar" class="circle">
+                            <span class="title">Ellen Willamse</span>
+                            <p class="truncate">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt quo sapiente laudantium quisquam. Nam quia nesciunt officia eum minus? Vero qui voluptates cum delectus atque.</p>
+                            <a href="#" class="approve green-text">Approve</a> |
+                            <a href="#" class="deny red-text">Deny</a>
+                        </picture>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- /.section section-visitors blue lighten-4 -->
+
+    <section class="section section-recent">
+        <div class="row">
+            <div class="col s12 m6 l8">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">Recent Posts</span>
+                        <table class="striped">
+                            <thead>
+                                <tr>
+                                    <th>Title</th>
+                                    <th>Category</th>
+                                    <th></th>
+                                </tr>
+                                <tbody>
+                                    <tr>
+                                        <td>Post One</td>
+                                        <td>Web Delevelopment</td>
+                                        <td><a href="details.html" class="btn blue lighten-2">Details</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Post Two</td>
+                                        <td>Graphic Design</td>
+                                        <td><a href="details.html" class="btn blue lighten-2">Details</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Post One</td>
+                                        <td>Web Delevelopment</td>
+                                        <td><a href="details.html" class="btn blue lighten-2">Details</a></td>
+                                    </tr>
+                                </tbody>
+                            </thead>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">Quick Todos</span>
+                        <form id="todo-form">
+                            <div class="input-field">
+                                <input type="text" id="todo" placeholder="Add Todo...">
+                            </div>
+                        </form>
+                        <ul class="collection todos">
+                            <li class="collection-item">
+                                Todo One 
+                                <a href="#!" class="secondary-content delete">
+                                    <i class="material-icons">close</i>
+                                </a>
+                            </li>
+                            <li class="collection-item">
+                                Todo Two 
+                                <a href="#!" class="secondary-content delete">
+                                    <i class="material-icons">close</i>
+                                </a>
+                            </li>
+                            <li class="collection-item">
+                                Todo Third 
+                                <a href="#!" class="secondary-content delete">
+                                    <i class="material-icons">close</i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /.section section-recent -->
+
+    <footer class="section blue darken-2 white-text center">
+        <p>Madmin panel Copyright &copy; 2021</p>
+    </footer>
+    <!-- /.section blue darken-2 white-text center -->
+
+    <!-- Fixed Action Button -->
+    <div class="fixed-action-btn">
+        <a href="#!" class="btn-floating btn-large red">
+            <i class="material-icons">add</i>
+        </a>
+        <ul>
+            <li><a href="#post-modal" class="btn-floating blue modal-trigger"><i class="material-icons">mode_edit</i></a></li>
+            <li><a href="#category-modal" class="btn-floating blue modal-trigger"><i class="material-icons">folder</i></a></li>
+            <li><a href="#user-modal" class="btn-floating blue modal-trigger"><i class="material-icons">supervisor_account</i></a></li>
+        </ul>
+    </div>
+
+    <!-- Post model -->
+    <div id="post-modal" class="modal">
+        <div class="modal-content">
+            <h4>Add Post</h4>
+            <form>
+                <div class="input-field">
+                    <input type="text" id="title">
+                    <label for="title">Title</label>
+                </div>
+                <div class="input-field">
+                    <select>
+                        <option value="" disabled selected>Select option</option>
+                        <option value="1">Web Development</option>
+                        <option value="2">Graphic Design</option>
+                        <option value="3">Tech Gadgets</option>
+                        <option value="4">Other</option>
+                    </select>
+                    <label>Category</label>
+                </div>
+                <div class="input-field">
+                    <textarea name="body" id="body" class="materialize-textarea"></textarea>
+                    <label for="body"></label>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+        </div>
+    </div>
+
+    <!-- Category model -->
+    <div id="category-modal" class="modal">
+        <div class="modal-content">
+            <h4>Add Category</h4>
+            <form>
+                <div class="input-field">
+                    <input type="text" id="title">
+                    <label for="title">Title</label>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+        </div>
+    </div>
+
+    <!-- User model -->
+    <div id="user-modal" class="modal">
+        <div class="modal-content">
+            <h4>Add User</h4>
+            <form>
+                <div class="input-field">
+                    <input type="text" id="name">
+                    <label for="name">Name</label>
+                </div>
+                <div class="input-field">
+                    <input type="email" id="email">
+                    <label for="email">Email</label>
+                </div>
+                <div class="input-field">
+                    <input type="password" id="password">
+                    <label for="password">Password</label>
+                </div>
+                <div class="input-field">
+                    <input type="password" id="password2">
+                    <label for="password2">Confirm password</label>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+        </div>
+    </div>
+    
     <div class="loader preloader-wrapper big active">
         <div class="spinner-layer spinner-blue-only">
           <div class="circle-clipper left">
@@ -108,6 +322,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.ckeditor.com/ckeditor5/28.0.0/classic/ckeditor.js"></script>
     <script type="text/javascript" src="js/main.min.js"></script>
 </body>
 </html>
